--- a/client/react-app/styles/_mixins.scss
+++ b/client/react-app/styles/_mixins.scss
@@ -79,144 +79,7 @@
 	mask-position: center;
 }
 
-//////// Text //////////
-@mixin headerBold50() {
-	font-family: $fBold;
-	font-size: 50px;
-	color: $cBlack;
-	line-height: 160%;
-	@media screen and (max-width: 1200px) {
-		font-size: 47px;
-	}
-	@media screen and (max-width: 1100px) {
-		font-size: 43px;
-	}
-	@media screen and (max-width: 992px) {
-		font-size: 35px;
-	}
-	@media screen and (max-width: 768px) {
-		font-size: 30px;
-	}
-	@media screen and (max-width: 576px) {
-		font-size: 24px;
-	}
-}
-@mixin headerBold40() {
-	@media screen and (min-width: 1500px) {
-		font-size: 45px;
-	}
-	font-family: $fBold;
-	font-size: 40px;
-	color: $cBlack;
-	line-height: 140%;
-	@media screen and (max-width: 992px) {
-		font-size: 37px;
-	}
-	@media screen and (max-width: 768px) {
-		font-size: 34px;
-	}
-	@media screen and (max-width: 576px) {
-		font-size: 31px;
-	}
-	@media screen and (max-width: 450px) {
-		font-size: 28px;
-	}
-}
-@mixin headerBold24() {
-	font-family: $fBold;
-	font-size: 24px;
-	color: #1e1a20;
-	line-height: 34px;
-}
-@mixin headerBold20() {
-	font-family: $fBold;
-	font-size: 20px;
-	color: $cBlack;
-	line-height: 28px;
-}
-@mixin headerBold14() {
-	font-family: $fBold;
-	font-size: 14px;
-	color: $cBlack;
-	line-height: 20px;
-}
 
-@mixin plainText24() {
-	font-family: $fRegular;
-	font-size: 24px;
-	line-height: 36px;
-	color: $cBlack;
-	@media (max-width: 992px) {
-		line-height: 33px;
-		font-size: 23px;
-	}
-	@media (max-width: 768px) {
-		line-height: 30px;
-		font-size: 22px;
-	}
-	@media (max-width: 576px) {
-		line-height: 28px;
-		font-size: 20px;
-	}
-	@media (max-width: 450px) {
-		font-size: 18px;
-	}
-	@media (max-width: 375px) {
-		font-size: 17px;
-	}
-}
-@mixin plainText18() {
-	font-family: $fRegular;
-	font-size: 18px;
-	line-height: 32px;
-	color: $cBlack;
-
-	@media (max-width: 992px) {
-		font-size: 17px;
-	}
-	@media (max-width: 576px) {
-		font-size: 16px;
-	}
-	@media (max-width: 450px) {
-		font-size: 15px;
-	}
-}
-@mixin plainText16() {
-	font-family: $fRegular;
-	font-size: 16px;
-	line-height: 140%;
-	color: $cBlack;
-	@media (max-width: 1140px) {
-		font-size: 15.5px;
-	}
-	@media (max-width: 1040px) {
-		font-size: 15px;
-	}
-	@media (max-width: 992px) {
-		font-size: 14.5px;
-	}
-	@media (max-width: 768px) {
-		font-size: 14px;
-	}
-	@media (max-width: 400px) {
-		font-size: 13px;
-	}
-	@media (max-width: 350px) {
-		font-size: 12.5px;
-	}
-}
-@mixin plainText14() {
-	font-family: $fRegular;
-	font-size: 14px;
-	line-height: 24px;
-	color: $cBlack;
-}
-@mixin plainText13() {
-	font-family: $fRegular;
-	font-size: 13px;
-	line-height: 24px;
-	color: $cBlack;
-}
 // Custom SVG encoded as a data URI.
 // Note: The XML declaration and comments have been removed for brevity.
 // Shape 1 – Original SVG background
@@ -228,6 +91,13 @@ $custom-svg-button2: "data:image/svg+xml,%3Csvg%20version='1.1'%20id='svg1'%20wi
 // Shape 3 – Third SVG background (URL-encoded version of your third SVG)
 $custom-svg-button3: "data:image/svg+xml,%3Csvg%20version='1.1'%20id='svg1'%20width='55.025978'%20height='14.735199'%20viewBox='0%200%2055.025978%2014.735199'%20xmlns='http://www.w3.org/2000/svg'%20xmlns:svg='http://www.w3.org/2000/svg'%3E%3Cdefs%20id='defs1'/%3E%3Cg%20id='g14'%20transform='matrix(2.9088361,-3.2389591,3.2389591,2.9088361,-327.30791,-6.4459879)'%20style='fill:%233a865b;fill-opacity:1'%3E%3Cpath%20style='fill:%233a865b;fill-opacity:1'%20d='m%2053.37963,66.436102%20c%20-1.913377,-2.932743%20-6.852154,-6.344462%20-6.18294,-7.269659%201.87316,-2.589669%200.91617,-3.28831%209.513272,6.195554%201.553302,1.713519%20-1.787172,3.439393%20-3.330332,1.074105z'%3E%3C/path%3E%3C/g%3E%3C/svg%3E";
 
+// Shape 4 (based on your first provided SVG)
+$custom-svg-button4: "data:image/svg+xml,%3Csvg%20version='1.1'%20id='svg1'%20width='31.729397'%20height='13.078386'%20viewBox='0%200%2031.729397%2013.078387'%20sodipodi:docname='button_bg_3.svg'%20xmlns:inkscape='http://www.inkscape.org/namespaces/inkscape'%20xmlns:sodipodi='http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd'%20xmlns='http://www.w3.org/2000/svg'%20xmlns:svg='http://www.w3.org/2000/svg'%3E%3Csodipodi:namedview%20id='namedview1'%20pagecolor='%23505050'%20bordercolor='%23eeeeee'%20borderopacity='1'%20inkscape:showpageshadow='0'%20inkscape:pageopacity='0'%20inkscape:pagecheckerboard='0'%20inkscape:deskcolor='%23505050'%3E%3Cinkscape:page%20x='0'%20y='-1.198311e-17'%20width='31.729397'%20height='13.078387'%20id='page2'%20margin='0'%20bleed='0'/%3E%3C/sodipodi:namedview%3E%3Cdefs%20id='defs1'/%3E%3Cg%20id='g14'%20transform='matrix(2.0396422,-3.2389591,2.2711206,2.9088361,-235.57187,-8.8886614)'%20style='fill:%233a865b;fill-opacity:1'%3E%3Cpath%20style='fill:%233a865b;fill-opacity:1'%20d='m%2053.991389,67.298704%20c%20-2.710727,-2.680664%20-6.103095,-5.743465%20-5.259549,-7.148545%201.169058,-1.94728%202.055701,-0.654778%206.478156,4.534448%202.714657,3.185329%20-0.450968,3.373222%20-1.218607,2.614097z'%20id='path4'%20sodipodi:nodetypes='cssc'/%3E%3C/g%3E%3C/svg%3E";
+
+// Shape 5 (based on your second provided SVG)
+
+$custom-svg-button5: "data:image/svg+xml,%3Csvg%20version='1.1'%20id='svg1'%20width='32.590038'%20height='13.989595'%20viewBox='0%200%2032.590038%2013.989596'%20xmlns='http://www.w3.org/2000/svg'%20xmlns:svg='http://www.w3.org/2000/svg'%3E%3Cdefs%20id='defs1'/%3E%3Cg%20id='g14'%20transform='matrix(2.0396422,-3.2389591,2.2711206,2.9088361,-235.63308,-8.4351761)'%20style='fill:%233a865b;fill-opacity:1'%3E%3Cpath%20style='fill:%233a865b;fill-opacity:1'%20d='m%2053.893357,67.542728%20c%20-2.122176,-2.679802%20-6.230939,-5.603121%20-5.161517,-7.392569%201.128446,-1.888213%202.397927,-0.513825%206.702495,4.613745%202.690309,3.204676%20-0.343042,3.674285%20-1.540978,2.778824%20z'%20/%3E%3C/g%3E%3C/svg%3E";
+
 @mixin button-custom($shape: 1) {
 	// Initialize $svg with the default shape (shape 1)
 	$svg: $custom-svg-button;
@@ -237,6 +107,10 @@ $custom-svg-button3: "data:image/svg+xml,%3Csvg%20version='1.1'%20id='svg1'%20wi
 		$svg: $custom-svg-button2;
 	} @else if $shape == 3 {
 		$svg: $custom-svg-button3;
+	} @else if $shape == 4 {
+		$svg: $custom-svg-button4;
+	} @else if $shape == 5 {
+		$svg: $custom-svg-button5;
 	}
 
 	display: inline-block;
@@ -286,10 +160,9 @@ $custom-svg: "data:image/svg+xml,%3Csvg%20version='1.1'%20id='svg1'%20width='100
 // Mixin: Apply the custom SVG to both sides of a header,
 // with the left side rotated 180 deg.
 @mixin custom-svg-decorated-header(
-	$svg: $custom-svg,
 	$size: 100px,
-	// The width & height of the pseudo-element container
-	$offset: 12px // Gap between header text and decorative elements
+	$offset: 12px, // Gap between header text and decorative elements
+	$svg: $custom-svg
 ) {
 	position: relative;
 	text-align: center;
@@ -324,3 +197,14 @@ $custom-svg: "data:image/svg+xml,%3Csvg%20version='1.1'%20id='svg1'%20width='100
 		transform: translateY(-50%);
 	}
 }
+
+
+//////// Text //////////
+@mixin headerWithRay($size, $offset) {
+	@include custom-svg-decorated-header($size, $offset);
+	font-size: 4.5rem;
+	line-height: 120%;
+	width: fit-content;
+	margin: 0 auto;
+  }
+  
