--- a/client/react-app/styles/sections/CoupleBlock.scss
+++ b/client/react-app/styles/sections/CoupleBlock.scss
@@ -1,4 +1,4 @@
-.coupleBlock {
+.couple_block {
 	// Make this section fill the viewport if desired
 	min-height: 100vh;
 	width: 100%;
@@ -18,8 +18,8 @@
 		background-position: top;
 	}
 
-	.coupleImages {
-		// If you are not using the <Image> component, you can remove this entire .coupleImages block
+	.couple_images {
+		// If you are not using the <Image> component, you can remove this entire .couple_images block
 		margin-bottom: 2rem;
 		position: absolute;
 		top: -60%;
@@ -31,7 +31,7 @@
 			margin-bottom: 1.5rem;
 		}
 
-		.couplePhoto {
+		.couple_photo {
 			filter: brightness(0.5);
 			// Example styles if you keep the <Image> component
 			width: 100%;
@@ -47,19 +47,14 @@
 		z-index: 1;
 		display: flex;
 		gap: 2rem;
-		justify-content: center;
+		justify-content: space-evenly;
 		align-items: center;
+		width: 100%;
 
-		@media (max-width: 768px) {
-			flex-direction: column;
-			gap: 1rem;
-		}
-
-		.timerItem {
+		.timer_item {
 			display: flex;
 			flex-direction: column;
 			align-items: center;
-			font-size: 2rem;
 			font-weight: 300;
 			color: white;
 
@@ -67,8 +62,14 @@
 				font-size: 1.6rem;
 			}
 
-			span:first-child {
-				font-weight: 700; // Days/Hours/Minutes/Seconds number
+			span {
+				&:first-child {
+					font-weight: 700; // Days/Hours/Minutes/Seconds number
+					font-size: 6rem;
+				}
+				&:last-child {
+					font-size: 3rem;
+				}
 			}
 		}
 	}
@@ -76,7 +77,10 @@
 	p {
 		margin-top: 2rem;
 		text-align: center;
-		font-size: 1.4rem;
+		font-size: 4rem;
+		z-index: 1;
+		color: white;
+
 		@media (max-width: 768px) {
 			font-size: 1.2rem;
 		}
