--- a/client/react-app/styles/_mixins.scss
+++ b/client/react-app/styles/_mixins.scss
@@ -78,31 +78,22 @@
 	mask-repeat: no-repeat;
 	mask-position: center;
 }
-
-
-// Custom SVG encoded as a data URI.
-// Note: The XML declaration and comments have been removed for brevity.
-// Shape 1 – Original SVG background
+// Define your SVG variants as data URIs.
 $custom-svg-button: "data:image/svg+xml,%3Csvg%20version='1.1'%20id='svg1'%20width='62.955662'%20height='15.671738'%20viewBox='0%200%2062.955662%2015.671738'%20xmlns='http://www.w3.org/2000/svg'%20xmlns:svg='http://www.w3.org/2000/svg'%3E%3Cdefs%20id='defs1'/%3E%3Cg%20id='g14'%20transform='matrix(2.9088361,-3.2389591,3.2389591,2.9088361,-325.2915,-4.2212396)'%20style='fill:%233a865b;fill-opacity:1'%3E%3Cpath%20style='fill:%233a865b;fill-opacity:1'%20d='m%2054.57826,67.559114%20c%20-1.913377,-2.932743%20-7.04134,-7.12586%20-7.022649,-8.416316%200.04496,-3.104229%201.462816,-3.737719%209.616957,6.129591%202.337483,2.828583%20-1.051148,4.652013%20-2.594308,2.286725z'%3E%3C/path%3E%3C/g%3E%3C/svg%3E";
 
-// Shape 2 – Second SVG background (URL-encoded version of your second SVG)
 $custom-svg-button2: "data:image/svg+xml,%3Csvg%20version='1.1'%20id='svg1'%20width='44.263031'%20height='13.240067'%20viewBox='0%200%2044.263031%2013.240067'%20xmlns='http://www.w3.org/2000/svg'%20xmlns:svg='http://www.w3.org/2000/svg'%3E%3Cdefs%20id='defs1'/%3E%3Cg%20id='g14'%20transform='matrix(2.9088361,-3.2389591,3.2389591,2.9088361,-336.12958,-8.7269756)'%20style='fill:%233a865b;fill-opacity:1'%3E%3Cpath%20style='fill:%233a865b;fill-opacity:1'%20d='m%2053.991389,67.298704%20c%20-2.710727,-2.680664%20-6.103095,-5.743465%20-5.259549,-7.148545%201.169058,-1.94728%202.678489,0.125329%207.249845,5.187037%201.550121,1.716397%20-1.222657,2.720633%20-1.990296,1.961508z'%3E%3C/path%3E%3C/g%3E%3C/svg%3E";
 
-// Shape 3 – Third SVG background (URL-encoded version of your third SVG)
 $custom-svg-button3: "data:image/svg+xml,%3Csvg%20version='1.1'%20id='svg1'%20width='55.025978'%20height='14.735199'%20viewBox='0%200%2055.025978%2014.735199'%20xmlns='http://www.w3.org/2000/svg'%20xmlns:svg='http://www.w3.org/2000/svg'%3E%3Cdefs%20id='defs1'/%3E%3Cg%20id='g14'%20transform='matrix(2.9088361,-3.2389591,3.2389591,2.9088361,-327.30791,-6.4459879)'%20style='fill:%233a865b;fill-opacity:1'%3E%3Cpath%20style='fill:%233a865b;fill-opacity:1'%20d='m%2053.37963,66.436102%20c%20-1.913377,-2.932743%20-6.852154,-6.344462%20-6.18294,-7.269659%201.87316,-2.589669%200.91617,-3.28831%209.513272,6.195554%201.553302,1.713519%20-1.787172,3.439393%20-3.330332,1.074105z'%3E%3C/path%3E%3C/g%3E%3C/svg%3E";
 
-// Shape 4 (based on your first provided SVG)
 $custom-svg-button4: "data:image/svg+xml,%3Csvg%20version='1.1'%20id='svg1'%20width='31.729397'%20height='13.078386'%20viewBox='0%200%2031.729397%2013.078387'%20sodipodi:docname='button_bg_3.svg'%20xmlns:inkscape='http://www.inkscape.org/namespaces/inkscape'%20xmlns:sodipodi='http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd'%20xmlns='http://www.w3.org/2000/svg'%20xmlns:svg='http://www.w3.org/2000/svg'%3E%3Csodipodi:namedview%20id='namedview1'%20pagecolor='%23505050'%20bordercolor='%23eeeeee'%20borderopacity='1'%20inkscape:showpageshadow='0'%20inkscape:pageopacity='0'%20inkscape:pagecheckerboard='0'%20inkscape:deskcolor='%23505050'%3E%3Cinkscape:page%20x='0'%20y='-1.198311e-17'%20width='31.729397'%20height='13.078387'%20id='page2'%20margin='0'%20bleed='0'/%3E%3C/sodipodi:namedview%3E%3Cdefs%20id='defs1'/%3E%3Cg%20id='g14'%20transform='matrix(2.0396422,-3.2389591,2.2711206,2.9088361,-235.57187,-8.8886614)'%20style='fill:%233a865b;fill-opacity:1'%3E%3Cpath%20style='fill:%233a865b;fill-opacity:1'%20d='m%2053.991389,67.298704%20c%20-2.710727,-2.680664%20-6.103095,-5.743465%20-5.259549,-7.148545%201.169058,-1.94728%202.055701,-0.654778%206.478156,4.534448%202.714657,3.185329%20-0.450968,3.373222%20-1.218607,2.614097z'%20id='path4'%20sodipodi:nodetypes='cssc'/%3E%3C/g%3E%3C/svg%3E";
-
-// Shape 5 (based on your second provided SVG)
 
 $custom-svg-button5: "data:image/svg+xml,%3Csvg%20version='1.1'%20id='svg1'%20width='32.590038'%20height='13.989595'%20viewBox='0%200%2032.590038%2013.989596'%20xmlns='http://www.w3.org/2000/svg'%20xmlns:svg='http://www.w3.org/2000/svg'%3E%3Cdefs%20id='defs1'/%3E%3Cg%20id='g14'%20transform='matrix(2.0396422,-3.2389591,2.2711206,2.9088361,-235.63308,-8.4351761)'%20style='fill:%233a865b;fill-opacity:1'%3E%3Cpath%20style='fill:%233a865b;fill-opacity:1'%20d='m%2053.893357,67.542728%20c%20-2.122176,-2.679802%20-6.230939,-5.603121%20-5.161517,-7.392569%201.128446,-1.888213%202.397927,-0.513825%206.702495,4.613745%202.690309,3.204676%20-0.343042,3.674285%20-1.540978,2.778824%20z'%20/%3E%3C/g%3E%3C/svg%3E";
 
+// Mixin for a masked button using one of the SVG shapes.
+// The SVG is applied as a mask and the element's background-color shows only through the masked area.
 @mixin button-custom($shape: 1) {
-	// Initialize $svg with the default shape (shape 1)
+	// Select the SVG based on the $shape parameter.
 	$svg: $custom-svg-button;
-
-	// Override $svg if a different shape is specified
 	@if $shape == 2 {
 		$svg: $custom-svg-button2;
 	} @else if $shape == 3 {
@@ -113,24 +104,27 @@ $custom-svg-button5: "data:image/svg+xml,%3Csvg%20version='1.1'%20id='svg1'%20wi
 		$svg: $custom-svg-button5;
 	}
 
-	display: inline-block;
-	padding: 1rem 2rem;
-	position: relative;
-	color: #fff;
-	border: none;
-	text-decoration: none;
-	cursor: pointer;
-
-	// Apply the chosen SVG as a background image
-	background-image: url("#{$svg}");
-	background-repeat: no-repeat;
-	background-size: contain; // Change to "cover" or set explicit dimensions if needed.
-	background-position: center;
+	width: fit-content;
+	background-color: $primary-color;
+	-webkit-mask-image: url("#{$svg}");
+	mask-image: url("#{$svg}");
+	mask-size: contain;
+	mask-repeat: no-repeat;
+	mask-position: center;
 	transition: all 0.3s ease-in-out;
-	font-family: $fRegular;
+	display: flex;
+	border: none;
+	cursor: pointer;
+	color: white;
+	padding: 15px 40px;
+	user-select: none;
+span{
+	user-select: none;
+
+}
 
 	&:hover {
-		filter: brightness(0.8);
+		background-color: $pink-color;
 	}
 }
 
@@ -161,7 +155,8 @@ $custom-svg: "data:image/svg+xml,%3Csvg%20version='1.1'%20id='svg1'%20width='100
 // with the left side rotated 180 deg.
 @mixin custom-svg-decorated-header(
 	$size: 100px,
-	$offset: 12px, // Gap between header text and decorative elements
+	$offset: 12px,
+	// Gap between header text and decorative elements
 	$svg: $custom-svg
 ) {
 	position: relative;
@@ -198,7 +193,6 @@ $custom-svg: "data:image/svg+xml,%3Csvg%20version='1.1'%20id='svg1'%20width='100
 	}
 }
 
-
 //////// Text //////////
 @mixin headerWithRay($size, $offset) {
 	@include custom-svg-decorated-header($size, $offset);
@@ -206,5 +200,4 @@ $custom-svg: "data:image/svg+xml,%3Csvg%20version='1.1'%20id='svg1'%20width='100
 	line-height: 120%;
 	width: fit-content;
 	margin: 0 auto;
-  }
-  
+}
