--- a/client/react-app/styles/sections/ChatBlock.scss
+++ b/client/react-app/styles/sections/ChatBlock.scss
@@ -1,49 +1,66 @@
 .chat_block {
 	position: relative;
 	width: 100%;
-	padding: 4rem 2rem;
-	text-align: center;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	z-index: 10;
+	min-height: 80vh;
 
-	h2 {
-		font-size: 2rem;
-		margin-bottom: 1rem;
-		color: $link-color;
-	}
-
-	p {
-		font-size: 1.1rem;
-		line-height: 1.4;
-		margin-bottom: 1.5rem;
-		max-width: 600px;
-		margin-left: auto;
-		margin-right: auto;
-	}
-
-	a {
-		display: inline-block;
-		padding: 0.75rem 1.5rem;
-		background: $primary-color;
-		color: $button-text-color;
-		text-decoration: none;
-		border-radius: 6px;
-		transition: background 0.3s ease;
-
-		&:hover {
-			background: $link-color;
+	.chat_block_bg {
+		position: absolute;
+		top: -300px;
+		left: -5vw;
+		width: 110vw;
+		height: 100vh;
+		height: 800px;
+		z-index: 0;
+		img {
+			width: 100%;
+			height: 1800px;
 		}
 	}
+	.chat_block_arrow {
+		position: absolute;
+		top: 9vh;
+		right: 2vw;
+		width: auto;
+		height: auto;
+		z-index: 1;
+		filter: invert(1);
+		transform: rotate(113deg) scale(1.4);
+	}
 
-	@media (max-width: 767px) {
-		padding: 2rem 1rem;
+	.chat_block_content {
+		z-index: 2;
+		position: relative;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
 
 		h2 {
-			font-size: 1.6rem;
+			@include headerWithRay($size: 80px, $offset: 30px);
+			font-size: 4rem;
+			color: white;
+
+			&::before,
+			&::after {
+				filter: $pinkFilter;
+			}
 		}
+
 		p {
-			font-size: 1rem;
+			font-size: 2rem;
+			max-width: 700px;
+			color: white;
+			margin-top: 50px;
+			margin-bottom: 30px;
+			text-align: center;
 		}
+
 		a {
-			padding: 0.6rem 1rem;
+			@include button-custom(5);
 		}
 	}
 }
