--- a/client/react-app/styles/sections/CoupleBlock.scss
+++ b/client/react-app/styles/sections/CoupleBlock.scss
@@ -11,6 +11,8 @@
 	justify-content: center;
 	position: relative;
 	overflow: hidden;
+	z-index: 11;
+
 	// Media query for smaller screens
 	@media (max-width: 768px) {
 		min-height: auto;
