--- a/client/react-app/styles/sections/Rsvp.scss
+++ b/client/react-app/styles/sections/Rsvp.scss
@@ -26,11 +26,12 @@
 		gap: 3vw;
 
 		.guestBlock {
+			min-width: 300px;
 			.guestRow {
 				display: flex;
 				flex-direction: column;
 				align-items: center;
-				gap: 10px;
+				gap: 20px;
 				margin-top: 10px;
 
 				@media screen and (max-width: 768px) {
@@ -54,13 +55,15 @@
 					gap: 16px;
 
 					button {
-						font-size: 1.3em;
-						padding: 2rem 3rem;
+						font-size: 1.4em;
+						z-index: 10;
 						&:first-of-type {
 							@include button-custom(4);
+							padding: 5px 40px;
 						}
 						&:last-of-type {
 							@include button-custom(5);
+							padding: 5px 40px;
 						}
 					}
 				}
@@ -124,16 +127,18 @@
 
 						// Use ::before to render the SVG inline.
 						&::before {
+							transition: all 0.3s ease-in-out;
 							content: url("../../img/radio_small_outline_heart.svg");
 							display: block;
 							/* The pseudo-element will adopt the intrinsic dimensions 
-						 from the SVG file. If you need it to scale, adjust the container’s size. */
+							from the SVG file. If you need it to scale, adjust the container’s size. */
 							transform: scale(0.7);
 						}
 					}
 
 					// When the radio is checked, update the pseudo-element to show the filled heart.
 					input[type="radio"]:checked + .customRadio::before {
+						transition: all 0.3s ease-in-out;
 						content: url("../../img/radio_small_filled_heart.svg");
 					}
 
@@ -155,10 +160,10 @@
 				.wineTypeBlock,
 				.customAlcoholBlock {
 					margin-left: 24px;
-					margin-bottom: 10px;
+					margin-bottom: 16px;
 					background-color: white;
 					p {
-						margin-bottom: 5px;
+						margin-bottom: 10px;
 						font-family: $fRegular;
 						color: $plain-text-color;
 					}
@@ -175,17 +180,5 @@
 	}
 	.sendRvsp {
 		font-size: 1em;
-		color: white;
-		
-		span {
-			color: white;
-
-		}
-		&:hover {
-			filter: $pinkFilter !important;
-			span{
-				filter: invert(1) !important;
-			}
-		}
 	}
 }
