додав медіа стилів і свг маску на блок з таймером

--- a/client/react-app/styles/_variables.scss
+++ b/client/react-app/styles/_variables.scss
@@ -6,6 +6,7 @@ $fBold: CarloMelowSans, sans-serif;
 $primary-color: #3a865b;
 $primary-color-hover: #276542;
 $pink-color: #ff9aff;
+$pink-color-hover: #ff70ff;
 $cOrange: #e74c3c;
 $cWhite: white;
 
