--- a/client/react-app/styles/_mixins.scss
+++ b/client/react-app/styles/_mixins.scss
@@ -118,13 +118,14 @@ $custom-svg-button5: "data:image/svg+xml,%3Csvg%20version='1.1'%20id='svg1'%20wi
 	color: white;
 	padding: 15px 40px;
 	user-select: none;
-span{
-	user-select: none;
-
-}
-
+	z-index: 2;
+	position: relative;
+	span {
+		user-select: none;
+	}
 	&:hover {
 		background-color: $pink-color;
+		// optionally sharpen the shadow on hover
 	}
 }
 
