--- a/client/react-app/styles/sections/ChatBlock.scss
+++ b/client/react-app/styles/sections/ChatBlock.scss
@@ -7,10 +7,12 @@
 	align-items: center;
 	z-index: 10;
 	min-height: 80vh;
+overflow-x: clip;
+	
+top: -300px;
 
 	.chat_block_bg {
 		position: absolute;
-		top: -300px;
 		left: -5vw;
 		width: 110vw;
 		height: 100vh;
@@ -61,6 +63,11 @@
 
 		a {
 			@include button-custom(5);
+			background-color: $pink-color;
+			padding: 20px 40px;
+			&:hover {
+				background-color: $pink-color-hover;
+			}
 		}
 	}
 }
