--- a/client/react-app/styles/sections/CoupleBlock.scss
+++ b/client/react-app/styles/sections/CoupleBlock.scss
@@ -3,8 +3,6 @@
 	min-height: 100vh;
 	width: 100%;
 	// Background image for the entire block
-	background: url("/images/bride_and_groom.png") no-repeat center center;
-	background-size: cover;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -12,7 +10,19 @@
 	position: relative;
 	overflow: hidden;
 	z-index: 11;
+	/* WebKit-based browsers */
+	-webkit-mask-image: url("../../img/couple_mask.svg");
+	-webkit-mask-repeat: no-repeat;
+	-webkit-mask-position: center center;
+	-webkit-mask-size: cover;
 
+	/* Other modern browsers */
+	mask-image: url("../../img/couple_mask.svg");
+	mask-repeat: no-repeat;
+	mask-position: center center;
+	mask-size: 100% 100%;
+	mask-mode: alpha;
+	// transform: scale(1.14);
 	// Media query for smaller screens
 	@media (max-width: 768px) {
 		min-height: auto;
@@ -29,6 +39,7 @@
 		right: 0;
 		width: 100%;
 		height: 100%;
+
 		@media (max-width: 768px) {
 			margin-bottom: 1.5rem;
 		}
