--- a/client/react-app/styles/sections/DressCodeBlock.scss
+++ b/client/react-app/styles/sections/DressCodeBlock.scss
@@ -7,7 +7,7 @@
 	justify-content: center;
 	align-items: center;
 	flex-direction: column;
-
+overflow-x: clip;
 	@mixin dress_code_block_bg {
 		position: absolute;
 		top: 0;
@@ -33,7 +33,7 @@
 		height: 850px;
 
 		img {
-			transform: scale(1.1) scaleX(-1.7) scaleY(1.3) rotate(6deg);
+			transform: scale(1.1) scaleX(-1.7) scaleY(1.2) rotate(6deg);
 			filter: $pinkFilter;
 			user-select: none;
 		}
@@ -88,7 +88,7 @@
 				margin-bottom: 250px;
 			}
 			&:last-of-type {
-				margin-bottom: 160px;
+				margin-bottom: 200px;
 			}
 			// We won’t use a simple horizontal row layout now because we want a scattered effect
 			.color_item {
@@ -105,24 +105,24 @@
 
 			// Each nth-child gets a different heart mask + position
 			.color_item:nth-child(3n + 1) .colorImage {
-				-webkit-mask: url("../../img/dresscode_heart_mask.svg") no-repeat
+				-webkit-mask: url("../../img/dresscode/dresscode_heart_mask.svg")
+					no-repeat center / contain;
+				mask: url("../../img/dresscode/dresscode_heart_mask.svg") no-repeat
 					center / contain;
-				mask: url("../../img/dresscode_heart_mask.svg") no-repeat center /
-					contain;
 			}
 
 			.color_item:nth-child(3n + 2) .colorImage {
-				-webkit-mask: url("../../img/dresscode_heart_mask_1.svg") no-repeat
-					center / contain;
-				mask: url("../../img/dresscode_heart_mask_1.svg") no-repeat center /
-					contain;
+				-webkit-mask: url("../../img/dresscode/dresscode_heart_mask_1.svg")
+					no-repeat center / contain;
+				mask: url("../../img/dresscode/dresscode_heart_mask_1.svg")
+					no-repeat center / contain;
 			}
 
 			.color_item:nth-child(3n) .colorImage {
-				-webkit-mask: url("../../img/dresscode_heart_mask_2.svg") no-repeat
-					center / contain;
-				mask: url("../../img/dresscode_heart_mask_2.svg") no-repeat center /
-					contain;
+				-webkit-mask: url("../../img/dresscode/dresscode_heart_mask_2.svg")
+					no-repeat center / contain;
+				mask: url("../../img/dresscode/dresscode_heart_mask_2.svg")
+					no-repeat center / contain;
 			}
 
 			// Now apply different random-ish top/left for each item
