--- a/client/react-app/styles/sections/HeroSection.scss
+++ b/client/react-app/styles/sections/HeroSection.scss
@@ -9,7 +9,6 @@
 	z-index: 0;
 
 	.hero_content {
-		height: 100vh;
 		position: relative;
 		z-index: 10; /* Content above falling hearts */
 		max-width: 1400px;
@@ -22,21 +21,38 @@
 		align-items: center;
 		flex-direction: row;
 		column-gap: 4vw;
+		height: 100vh;
+		@media screen and (max-width: 1500px) {
+			column-gap: 2vw;
+		}
+		@media screen and (max-width: 1300px) {
+			padding-top: 5rem;
+		}
+		@media screen and (max-width: 1200px) {
+		flex-direction: column;
+		height: fit-content;
+		}
+		@media (max-width: 768px) {
+			padding: 2rem 1rem;
+		}
 		.hero_content_text {
 			display: flex;
 			flex-direction: column;
 			gap: 16px;
 		}
 
-		@media (max-width: 768px) {
-			padding: 2rem 1rem;
-		}
-
+	
 		.hero_content_dear {
 			font-size: 1.4em;
 		}
 		h1 {
-			font-size: 5rem;
+			font-size: 3.5em;
+			@media screen and (max-width: 1500px) {
+				font-size: 3.3em;
+			}
+			@media screen and (max-width: 1300px) {
+			font-size: 2.9em;
+			}
 			@media screen and (max-width: 768px) {
 				font-size: 2em;
 			}
@@ -48,6 +64,12 @@
 			font-weight: normal;
 			font-size: 1.6em;
 			line-height: 120%;
+			@media screen and (max-width: 1500px) {
+				font-size: 1.5em;
+			}
+			@media screen and (max-width: 1300px) {
+			font-size: 1.3em;
+			}
 		}
 
 		.images_wrapper {
@@ -61,19 +83,19 @@
 				height: 700px;
 				width: auto;
 				z-index: 1;
-			}
-			.child_photo_blurred {
-				position: absolute;
-				transform: scale(0.7);
-				z-index: 0;
-				filter: blur(50px);
+				
+				@media screen and (max-height: 800px) {
+					height: 80vh;
+				}
 			}
 		}
 		.city {
 			font-size: 2em;
-			@media screen and (max-width: 1200px) {
-				padding-top: 50px;
+			@media screen and (max-width: 1300px) {
+				font-size: 1.5em;
+			
 			}
+
 		}
 
 		.city,
