--- a/client/react-app/styles/sections/Rsvp.scss
+++ b/client/react-app/styles/sections/Rsvp.scss
@@ -90,6 +90,7 @@
 
 				// Each label wraps the hidden radio, the custom heart icon, and the label text
 				label {
+					position: relative;
 					display: flex;
 					align-items: center;
 					gap: 16px;
@@ -97,7 +98,15 @@
 					margin-bottom: 10px;
 					font-family: $fRegular;
 					color: $plain-text-color;
-
+					transition: all 0.3s ease-in-out;
+					&:hover {
+						color: $pink-color;
+						.customRadio {
+							&::after {
+								opacity: 1;
+							}
+						}
+					}
 					@media screen and (max-width: 768px) {
 						display: block;
 						margin-bottom: 10px;
@@ -113,26 +122,35 @@
 
 					// The container that will display the heart icon via a pseudo-element.
 					.customRadio {
-						position: relative;
 						width: 40px;
 						height: 40px;
 						display: flex;
 						align-items: center;
 						justify-content: center;
-
+						transition: all 0.3s ease-in-out;
 						@media screen and (max-width: 768px) {
 							width: 28px;
 							height: 28px;
 						}
 
 						// Use ::before to render the SVG inline.
+						&::after,
 						&::before {
 							transition: all 0.3s ease-in-out;
-							content: url("../../img/radio_small_outline_heart.svg");
 							display: block;
-							/* The pseudo-element will adopt the intrinsic dimensions 
-							from the SVG file. If you need it to scale, adjust the container’s size. */
 							transform: scale(0.7);
+							position: absolute;
+							top: -5px;
+							left: -5px;
+						}
+						&::before {
+							content: url("../../img/radio_small_outline_heart.svg");
+							z-index: 0;
+						}
+						&::after {
+							content: url("../../img/radio_small_filled_heart.svg");
+							opacity: 0;
+							z-index: 1;
 						}
 					}
 
@@ -180,5 +198,6 @@
 	}
 	.sendRvsp {
 		font-size: 1em;
+		padding: 20px 40px;
 	}
 }
