--- a/client/react-app/styles/sections/ChatBlock.scss
+++ b/client/react-app/styles/sections/ChatBlock.scss
@@ -6,40 +6,42 @@
 	justify-content: center;
 	align-items: center;
 	z-index: 10;
-	min-height: 80vh;
-overflow-x: clip;
+	// min-height: 90vh;
+	overflow: clip;
+	@media screen and (max-width: 1200px) {
+		min-height: 700px;
 	
-top: -300px;
+	}
 
 	.chat_block_bg {
 		position: absolute;
+		top: 0;
 		left: -5vw;
 		width: 110vw;
-		height: 100vh;
 		height: 800px;
 		z-index: 0;
 		img {
 			width: 100%;
-			height: 1800px;
 		}
 	}
+
 	.chat_block_arrow {
 		position: absolute;
-		top: 9vh;
-		right: 2vw;
+		top: 46vh;
+		right: 6vw;
 		width: auto;
 		height: auto;
 		z-index: 1;
 		filter: invert(1);
-		transform: rotate(113deg) scale(1.4);
+		transform: rotate(127deg) scale(1.4);
 	}
-
 	.chat_block_content {
 		z-index: 2;
 		position: relative;
 		display: flex;
 		flex-direction: column;
 		align-items: center;
+		padding-top: 240px;
 
 		h2 {
 			@include headerWithRay($size: 80px, $offset: 30px);
@@ -63,11 +65,8 @@ top: -300px;
 
 		a {
 			@include button-custom(5);
-			background-color: $pink-color;
+			@include button-custom_pink;
 			padding: 20px 40px;
-			&:hover {
-				background-color: $pink-color-hover;
-			}
 		}
 	}
 }
