--- a/client/react-app/styles/sections/CoupleBlock.scss
+++ b/client/react-app/styles/sections/CoupleBlock.scss
@@ -1,6 +1,4 @@
 .couple_block {
-	// Make this section fill the viewport if desired
-	min-height: 100vh;
 	width: 100%;
 	// Background image for the entire block
 	display: flex;
@@ -8,51 +6,53 @@
 	align-items: center;
 	justify-content: center;
 	position: relative;
-	overflow: hidden;
 	z-index: 11;
 	/* WebKit-based browsers */
-	-webkit-mask-image: url("../../img/couple_mask.svg");
-	-webkit-mask-repeat: no-repeat;
-	-webkit-mask-position: center center;
-	-webkit-mask-size: cover;
-
-	/* Other modern browsers */
-	mask-image: url("../../img/couple_mask.svg");
-	mask-repeat: no-repeat;
-	mask-position: center center;
-	mask-size: 100% 100%;
-	mask-mode: alpha;
-	// transform: scale(1.14);
+	overflow-x: clip;
+	
 	// Media query for smaller screens
 	@media (max-width: 768px) {
 		min-height: auto;
 		padding: 2rem 1rem;
 		background-position: top;
 	}
+	
+	.couple_image_wrapper {
+		overflow: hidden;
 
-	.couple_images {
-		// If you are not using the <Image> component, you can remove this entire .couple_images block
+		-webkit-mask-image: url("../../img/couple_mask.svg");
+		-webkit-mask-repeat: no-repeat;
+		-webkit-mask-position: center center;
+		-webkit-mask-size: cover;
+	
+		mask-image: url("../../img/couple_mask.svg");
+		mask-repeat: no-repeat;
+		mask-position: center center;
+		mask-size: 100% 100%;
+		mask-mode: alpha;
+		top: -56px;
+		transform: scale(1.14);
+		position: relative;
 		margin-bottom: 2rem;
+		z-index: 0;
+		height:100vh;
 		position: absolute;
-		top: -60%;
+		top: 0;
 		left: 0;
 		right: 0;
-		width: 100%;
-		height: 100%;
-
+		
 		@media (max-width: 768px) {
 			margin-bottom: 1.5rem;
 		}
-
-		.couple_photo {
-			filter: brightness(0.5);
-			// Example styles if you keep the <Image> component
+		.couple_image{
 			width: 100%;
-			margin: 0 auto;
-			object-fit: cover;
-			@media (max-width: 768px) {
-				width: 200px;
-			}
+			height: 100vh;
+			background-image: url("../../img/couple.png");
+			background-size: cover;
+			background-position: center center;
+			background-position-y: 30%;
+			display:inline-block;
+			filter: brightness(0.5);
 		}
 	}
 
