--- a/client/react-app/styles/sections/GiftBlock.scss
+++ b/client/react-app/styles/sections/GiftBlock.scss
@@ -2,10 +2,12 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	justify-content: center;
 	position: relative;
 	width: 100%;
 	padding: 100px 2rem;
-
+	min-height: 80vh;
+	overflow-x: clip;
 	h2 {
 		@include headerWithRay($size: 90px, $offset: 20px);
 		font-size: 5rem;
